[gd_scene load_steps=2 format=3 uid="uid://c6f3lw5xum5vc"]

[ext_resource type="Script" path="res://sources/interface/SelectingGame.gd" id="1_65aun"]

[node name="SelectingGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_65aun")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 50
text = "选择游戏"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 100.0
offset_right = 1200.0
offset_bottom = 600.0

[node name="game_list" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="new" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "新建"

[node name="delete" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "删除"

[connection signal="item_activated" from="VBoxContainer/game_list" to="." method="_on_game_list_item_activated"]
[connection signal="item_selected" from="VBoxContainer/game_list" to="." method="_on_game_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/delete" to="." method="_on_delete_pressed"]
